--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
 voicechannel = 
-textchannel = 
+textchannel = 715830540392988706
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
