--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 715830540392988707
 textchannel = 715830540392988706
 ladderchannel = 
 jungsanchannel = 
