--- a/command.ini
+++ b/command.ini
@@ -1,6 +1,6 @@
 -----command-----
-command00 = !입장, /입장
-command01 = !메뉴, /메뉴
+command00 = !입장
+command01 = !메뉴
 command02 = !설정확인
 command03 = !채널확인
 command04 = !채널이동
@@ -8,7 +8,7 @@ command05 = !소환
 command06 = !불러오기
 command07 = !초기화
 command08 = !명치
-command09 = !재시작, /재시작
+command09 = !재시작
 command10 = !미예약
 command11 = !분배
 command12 = !사다리
@@ -17,7 +17,7 @@ command14 = !보스일괄
 command15 = !ㅂ
 command16 = !ㅍ
 command17 = !리젠
-command18 = !현재시간, /현재시간
+command18 = !현재시간
 command19 = !공지
 command20 = !공지삭제
 command21 = !상태
