--- a/command.ini
+++ b/command.ini
@@ -22,8 +22,8 @@ command19 = !공지
 command20 = !공지삭제
 command21 = !상태
 command22 = 보스탐
-command23 = !보스탐, /보스탐
+command23 = !보스탐
 command24 = !킬초기화
 command25 = !킬
 command26 = !킬삭제
-command27 = !경주, /경주
+command27 = !경주
