--- a/boss.ini
+++ b/boss.ini
@@ -179,7 +179,7 @@ nogencheck = 0
 before_alert_ment = 입니다 오르펜의 둥지
 alert_ment = 입니다 어여오셔요  
 
-bossname = 바프장러러러
+bossname = 바프장
 gentime = 03:30
 nogencheck = 0
 before_alert_ment = 입니다 상아1층
