--- a/boss.ini
+++ b/boss.ini
@@ -1,198 +1,223 @@
-﻿-----일반보스-----
-bossname = 체르
+﻿﻿-----일반보스-----
+bossname = 체르투바
 gentime = 06:00
-nogencheck = 1
-before_alert_ment = 입니다 체르투바막사
-alert_ment = 입니다 체르투바막사
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 체르투바의 막사로 오세요
 
 bossname = 바실라
 gentime = 04:00
 nogencheck = 0
-before_alert_ment = 입니다 황무지 남부
-alert_ment = 입니다 황무지 남부
+before_alert_ment = 입니다
+alert_ment = 입니다. 황무지 남부로 오세요
 
 bossname = 켈소스
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 절망의 폐허
-alert_ment = 입니다 절망의 폐허
+before_alert_ment = 입니다
+alert_ment = 입니다. 절망의 폐허로 오세요
 
-bossname = 개미
+bossname = 여왕개미
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = 입니다 개던3층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 개미굴 3층으로 오세요
 
 bossname = 사반
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다 개던2층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 개미굴 2층으로 오세요
 
 bossname = 펠리스
 gentime = 03:00
 nogencheck = 0
-before_alert_ment = 입니다 비하이브
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 비하이브로 오세요
 
-bossname = 템페
+bossname = 템페스트
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = 입니다 시체처리소
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 시체 처리소로 오세요
 
 bossname = 엔쿠라
 gentime = 06:00
-nogencheck = 1
-before_alert_ment = 입니다 디온목초지
-alert_ment = 입니다 어여오셔요
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 디온 목초지로 오세요
 
 bossname = 탈라킨
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 반란군 아지트
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 반란군의 아지트로 오세요
 
 bossname = 사르카
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 델루 리자드맨 서식지
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 델루 리자드맨 서식지로 오세요
 
 bossname = 판드
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다 디온구릉지
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 디온 구릉지로 오세요
 
 bossname = 스탄
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = 입니다 크탑 입구
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 거인의 흔적으로 오세요
 
 bossname = 크루마
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = 입니다 거인의 흔적
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 크루마 습지로 오세요
 
 bossname = 티미트리스
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = 입니다 폴로란 개간지
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 플로란 개간지로 오세요
 
-bossname = 오크
+bossname = 오염크루마
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = 입니다 크탑3층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 크루마탑 3층으로 오세요
 
 bossname = 카탄
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 크탑6층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 크루마탑 6층으로 오세요
 
-bossname = 수스
+bossname = 코어
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 크탑7층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 크루마탑 7층으로 오세요
 
 bossname = 릴리
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다  죽음의 회랑
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 죽음의 회랑으로 오세요
 
 bossname = 메두사
 gentime = 10:00
 nogencheck = 0
-before_alert_ment = 입니다 메두사 정원
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 메두사의 정원으로 오세요
 
 bossname = 판나
 gentime = 05:00
 nogencheck = 0
-before_alert_ment = 입니다 고르곤 화원
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 고르곤 화원으로 오세요
 
 bossname = 마투라
 gentime = 06:00
 nogencheck = 0
-before_alert_ment = 입니다 약탈자 야영지
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 약탈자의 야영지로 오세요
 
 bossname = 브래카
 gentime = 06:00
 nogencheck = 0
-7before_alert_ment = 입니다 브래카 소굴
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 브래카 소굴로 오세요
 
 bossname = 베히모스
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = 입니다 용계 북부
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 용의 계곡 북부로 오세요
 
 bossname = 드비
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다 안타6층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 안타라스의 동굴 6층으로 오세요
 
 bossname = 탈킨
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = 입니다 리자드맨 부락
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 레토 리자드맨 부락으로 오세요
 
 bossname = 셀루
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다 피아제단
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 파아그리오의 제단으로 오세요
 
 bossname = 발보
 gentime = 12:00
 nogencheck = 0
-before_alert_ment = 입니다 산적산채
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 산적 산채로 오세요
 
 bossname = 티미니엘
 gentime = 08:00
 nogencheck = 0
-before_alert_ment = 입니다 티미니엘 보금자리
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 티미니엘의 보금자리로 오세요
 
 bossname = 레피로
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = 입니다 포자확산지
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 포자 확산지로 오세요
 
 bossname = 오르펜
 gentime = 24:00
 nogencheck = 0
-before_alert_ment = 입니다 오르펜의 둥지
-alert_ment = 입니다 어여오셔요  
-
-bossname = 바프장
-gentime = 03:30
-nogencheck = 0
-before_alert_ment = 입니다 상아1층
-alert_ment = 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 포자 확산지로 오세요
 
 bossname = 가레스
 gentime = 09:00
 nogencheck = 0
-before_alert_ment = 입니다 타르노협곡
-alert_ment = 탐 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 타노르 협곡으로 오세요
 
 bossname = 트롬바
 gentime = 07:00
 nogencheck = 0
-before_alert_ment = 입니다 피의 늪지대
-alert_ment = 탐 입니다 어여오셔요
+before_alert_ment = 입니다
+alert_ment = 입니다. 피의 늪지대로 오세요
+
+bossname = 망각의거울
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 거울의 숲으로 오세요
+
+bossname = 히실로메
+gentime = 06:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 격전의 평원으로 오세요
+
+bossname = 란도르
+gentime = 09:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 망각의 평원으로 오세요
+
+bossname = 글라키
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 고요한 분지로 오세요
+
+bossname = 올크스
+gentime = 24:00
+nogencheck = 0
+before_alert_ment = 입니다
+alert_ment = 입니다. 고요한 분지로 오세요
+
