--- a/boss.ini
+++ b/boss.ini
@@ -1,7 +1,7 @@
 ﻿﻿-----일반보스-----
 bossname = 체르투바
 gentime = 06:00
-nogencheck = 0
+nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 체르투바의 막사로 오세요
 
@@ -203,7 +203,7 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 격전의 평원으로 오세요
 
-bossname = 란도르
+bossname = 란도르1
 gentime = 09:00
 nogencheck = 0
 before_alert_ment = 입니다
